force-app/main/default/objects/Teacher__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <defaultValue>&quot;Default Address&quot;</defaultValue>
    <label>Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>