force-app/main/default/objects/Teacher__c/fields/Select_Type__c.field-meta.xml
<CustomField>
    <fullName>Select_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select Type</label>
    <type>Checkbox</type>
</CustomField>