force-app/main/default/objects/Teacher__c/fields/Teacher_Phone__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Phone__c</fullName>
    <label>Teacher Phone</label>
    <type>Phone</type>
</CustomField>