force-app/main/default/objects/Teacher__c/fields/Total_Active_Students__c.field-meta.xml
<CustomField>
    <fullName>Total_Active_Students__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total of Active Students</description>
    <label>Total Active Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>