force-app/main/default/objects/Teacher__c/fields/Total_Student_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Student_Count__c</fullName>
    <description>Student Count</description>
    <inlineHelpText>Total Number of Student count associated with Teacher</inlineHelpText>
    <label>Total Student Count</label>
    <summaryForeignKey>Student__c.My_Teacher__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>