force-app/main/default/objects/Teacher__c/validationRules/End_Date_Cant_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Cant_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( End_Date__c )</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Please Select values for End date
Note : End date can not be blank.</errorMessage>
</ValidationRule>