force-app/main/default/objects/Teacher__c/validationRules/EndDate_GT_Startdate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDate_GT_Startdate</fullName>
    <active>true</active>
    <description>End Date Should be Grater than Start Date</description>
    <errorConditionFormula>DATEVALUE
(TEXT(Start_Date__c)) &gt;   
DATEVALUE
(TEXT(End_Date__c ))</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>Please Select Valid End date
Note : End Date Must be Greater than Start date</errorMessage>
</ValidationRule>