force-app/main/default/objects/Teacher__c/validationRules/Start_Date_Cant_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Cant_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Start_Date__c )</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Please Select values for Start date
Note : Start date can not be blank.</errorMessage>
</ValidationRule>