force-app/main/default/objects/Teacher__c/validationRules/StartDate_LT_Enddate.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDate_LT_Enddate</fullName>
    <active>true</active>
    <description>Start Date Should be Lesser than End Date</description>
    <errorConditionFormula>DATEVALUE(  TEXT( Start_Date__c )  ) &gt;   DATEVALUE(  TEXT( End_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Please Select Valid Start date
Note : Start Date Must be Lesser than End date</errorMessage>
</ValidationRule>