force-app/main/default/objects/Teacher__c/listViews/Full_Teacher_Details.listView-meta.xml
<ListView>
    <fullName>Full_Teacher_Details</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Age__c</columns>
    <columns>Experience_Status__c</columns>
    <columns>Select_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Full Teacher Details</label>
</ListView>